# osmium-ide

./: .gitignore  .gitmodules  README.md
.github/ISSUE_TEMPLATE/: task.yml  technical-story.yml  user-story.yml
.github/workflows/: backend-qa.yaml  create-branch-and-draft.yml
backend/: .clang-format  CMakeLists.txt  main.cpp
backend/core/: CMakeLists.txt
backend/core/include/: ACore.hpp  Core.hpp  IModule.hpp  MessagingInterface.hpp
backend/core/include/exceptions/: CorruptedDynamicLibraryException.hpp  DynamicLibraryException.hpp  DynamicLibraryLoadingException.hpp  MissingDynamicLibraryException.hpp
backend/core/include/utils/: DynamicLoader.hpp
backend/core/src/: ACore.cpp  Core.cpp  MessagingInterface.cpp
backend/core/src/exceptions/: CorruptedDynamicLibraryException.cpp  DynamicLibraryException.cpp  MissingDynamicLibraryException.cpp
backend/core/src/utils/: DynamicLoader.cpp
backend/core/tests/: CMakeLists.txt
backend/core/tests/ProjectModule/Include/: ProjectModule.hpp
backend/core/tests/ProjectModule/src/: symbols.cpp
backend/core/tests/e2e-tests/: GoodDispatch.cpp  ModulesMediator.cpp  ModulesMediator.hpp  communication.cpp
backend/core/tests/inputModule/: CMakeLists.txt
backend/core/tests/inputModule/include/: InputModule.hpp
backend/core/tests/inputModule/src/: symbols.cpp
backend/core/tests/unit-tests/: Core.cpp  CoreTester.cpp  CoreTester.hpp  DynamicLibraryException.cpp  DynamicLoader.cpp
backend/core/tests/unit-tests/exceptions/: CorruptedDynamicLibraryException.cpp  MissingDynamicLibraryException.cpp
backend/editing/: CMakeLists.txt
backend/editing/include/: EditingModule.hpp
backend/editing/src/: EditingModule.cpp  symbols.cpp
backend/editing/tests/: CMakeLists.txt
backend/editing/tests/e2e-tests/: CMakeLists.txt  GoodLoading.cpp
backend/file/: CMakeLists.txt
backend/file/include/: FileModule.hpp
backend/file/src/: FileModule.cpp  symbols.cpp
backend/file/tests/: CMakeLists.txt
backend/file/tests/e2e-tests/: CMakeLists.txt  GoodLoading.cpp
backend/frontCommunication/: CMakeLists.txt
backend/frontCommunication/cmake/: FindIXWebSocket.cmake  FindZlib.cmake
backend/frontCommunication/include/: FrontCommunicationModule.hpp  RequestHandler.hpp  Server.hpp  ServerSession.hpp
backend/frontCommunication/lib/: CMakeLists.txt
backend/frontCommunication/lib/libuv/: CMakeLists.txt
backend/frontCommunication/lib/uWebSockets/: CMakeLists.txt  FindZlib.cmake
backend/frontCommunication/lib/zlib/: CMakeLists.txt
backend/frontCommunication/patches/: IXWebSockets-zlib.patch
backend/frontCommunication/src/: FrontCommunicationModule.cpp  RequestHandler.cpp  Server.cpp  ServerSession.cpp  symbols.cpp
backend/frontCommunication/tests/: CMakeLists.txt
backend/frontCommunication/tests/e2e-tests/: CMakeLists.txt  GoodLoading.cpp
backend/hierarchy/: CMakeLists.txt
backend/hierarchy/include/: HierarchyModule.hpp
backend/hierarchy/src/: HierarchyModule.cpp  symbols.cpp
backend/hierarchy/tests/: CMakeLists.txt
backend/hierarchy/tests/e2e-tests/: CMakeLists.txt  GoodLoading.cpp
backend/layout/: CMakeLists.txt
backend/layout/include/: LayoutModule.hpp
backend/layout/src/: LayoutModule.cpp  symbols.cpp
backend/layout/tests/: CMakeLists.txt
backend/layout/tests/e2e-tests/: CMakeLists.txt  GoodLoading.cpp
backend/payloads/: CMakeLists.txt
backend/payloads/include/: Component.hpp  ComponentStateEvent.hpp  ComponentTreeUpdate.hpp  Connection.hpp  CreateLayout.hpp  ExpendableList.hpp  File.hpp  FileTab.hpp  FrontComponentTreeUpdate.hpp  LayoutRequest.hpp  NewLayout.hpp  OpenFile.hpp  OpenProject.hpp  ProjectFiles.hpp  ReadFile.hpp
backend/payloads/src/: Component.cpp  ComponentStateEvent.cpp  ComponentTreeUpdate.cpp  Connection.cpp  CreateLayout.cpp  ExpendableList.cpp  FileTab.cpp  FrontComponentTreeUpdate.cpp  LayoutRequest.cpp  NewLayout.cpp  OpenFile.cpp  OpenProject.cpp  ProjectFiles.cpp  ReadFile.cpp  removeMe.cpp
backend/project/: CMakeLists.txt
backend/project/include/: ProjectModule.hpp
backend/project/src/: ProjectModule.cpp  symbols.cpp
backend/project/tests/: CMakeLists.txt
backend/project/tests/e2e-tests/: CMakeLists.txt  GoodLoading.cpp
backend/tabs/: CMakeLists.txt
backend/tabs/include/: TabsModule.hpp
backend/tabs/src/: TabsModule.cpp  symbols.cpp
backend/tabs/tests/: CMakeLists.txt
backend/tabs/tests/cmake/: FindModuleTester.cmake
backend/tabs/tests/e2e-tests/: CMakeLists.txt  GoodLoading.cpp
backend/ui/: CMakeLists.txt
backend/ui/include/: UiModule.hpp
backend/ui/src/: UiModule.cpp  symbols.cpp
backend/ui/tests/: CMakeLists.txt
backend/ui/tests/cmake/: FindGoogleTest.cmake
backend/ui/tests/e2e-tests/: CMakeLists.txt  GoodLoading.cpp
frontend/: .gitignore  index.html  log.txt  package.json  tailwind.config.ts
frontend/src/: App.css  App.tsx  main.css  main.tsx  styles.css  tree.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/builder/: ComponentsBuilder.tsx
frontend/src/components/: CheckBox.tsx  Components.ts  Label.tsx
frontend/src/components/Button/: Button.css  Button.tsx  Button.types.ts
frontend/src/components/Canvas/: Canvas.tsx
frontend/src/components/Card/: Card.tsx  Card.types.ts
frontend/src/components/CheckBox/: CheckBox.css  CheckBox.tsx  CheckBox.types.ts
frontend/src/components/Editor/: Editor.tsx
frontend/src/components/FileHierarchy/: FileHierarchy.tsx
frontend/src/components/Folder/: Folder.tsx  Folder.types.ts
frontend/src/components/Icon/: Icon.tsx  Icon.types.ts
frontend/src/components/Label/: Label.css  Label.tsx  Label.types.ts
frontend/src/components/LeftBar/: LeftBar.tsx  LeftBar.types.ts
frontend/src/components/Notification/: Notification.tsx  Notification.types.ts
frontend/src/components/PopUp/: PopUp.tsx  (+1 more)
frontend/src/protocolHelpers/: Component.d.ts  Message.ts  Property.ts  ProtocolConnector.ts  ProtocolService.ts  ProtocolServiceContext.tsx  useComponentAdded.ts  useComponentDeleted.ts  useComponentUpdated.ts  useInitialQuery.ts
(+16 files in other folders)
